# poc-multi-instance-data-prep

./: .copier-answers.yml  .pre-commit-config.yaml  Dockerfile  MLproject  README.md  build_and_push.sh  deploy_pipeline.sh  docker-bake.hcl  invoke.yaml  manage_ray_cluster.sh  pyproject.toml  sonar-project.properties
.github/actions/auth_artifactory/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: cd.yml  ci.yml  update.yml
notebooks/: batch_inference_bedrock.ipynb  connect_to_bedrock.ipynb  connect_to_es.ipynb  mlflow_usage.ipynb
notebooks/custom/: prepare_parquets.ipynb
pipelines/: delta_batch_processing.json  pyspark_process.json  ray_s3_sagemaker_processing.json  ray_sagemaker_processing.json  ray_sagemaker_processing_batch_size.json  seq_sharded_by_key.json
ray_cluster/: Dockerfile  config.yaml  full_example.yaml
src/poc_multi_instance_data_preparation/: utils.py
src/poc_multi_instance_data_preparation/delta_batch_processing/: batch_process.py
src/poc_multi_instance_data_preparation/pyspark_on_sagemaker/: hello_pyspark.py  pyspark_process.py  pyspark_process_parquet.py
src/poc_multi_instance_data_preparation/ray_on_sagemaker/: hello_ray.py  ray_process.py  ray_process_batch_size.py  ray_s3_process.py  sagemaker_ray_helper.py
src/poc_multi_instance_data_preparation/sharded_by_key/: seq_process.py
tasks/: testing.py
tests/unit/: test_example.py
tests/unit/ray_on_sagemaker/: test_ray_process.py
