# https://python-poetry.org/docs/pyproject/

# PROJECT

[tool.poetry]
name = "poc-multi-instance-data-preparation"
version = "0.0.0"  # This will be replaced by the dynamic versioning poetry plugin
description = "Testing processing data at scale in AWS"
repository = "https://github.com/avillalba-elastic/poc-multi-instance-data-preparation"
documentation = "https://avillalba-elastic.github.io/poc-multi-instance-data-preparation/"
authors = ["avillalba-elastic"]
readme = "README.md"
license = "MIT"
packages = [{ include = "poc_multi_instance_data_preparation", from = "src" }]

# DEPENDENCIES

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "2.16.2"
sagemaker-mlflow = "0.1.0"

[tool.poetry.group.tests.dependencies]
coverage = "^7.5.4"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-html = "^4.1.1"
pytest-random-order = "^1.1.1"
pytest-profiling = "^1.7.0"
nox = "^2024.10.9"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.9"
mypy = "^1.10.1"
ruff = "^0.5.0"
commitizen = "^3.27.0"
pre-commit = "^3.7.1"
invoke = "^2.2.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.1"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

[[tool.poetry.source]]
name = "artifactory-virtual-python"
url = "https://artifactory.elastic.dev/artifactory/api/pypi/python/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

# CONFIGURATIONS

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
strict = true
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = ["src"]


[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py312"
exclude = ["tasks/**","noxfile.py", "notebooks/"]
src = ["src"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "D",
    "E",
    "F",
    "FA",
    "NPY",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "TD",
    "TID",
    "T10",
    "UP",
    "W",
    "YTT"
]
extend-select = [
    "I",  # see: isort
    "C4",  # see: https://pypi.org/project/flake8-comprehensions
    "SIM",  # see: https://pypi.org/project/flake8-simplify
    "RET",  # see: https://pypi.org/project/flake8-return
    "PT",  # see: https://pypi.org/project/flake8-pytest-style
    "RUF100",  # see: https://docs.astral.sh/ruff/rules/unused-noqa/
]
ignore = [
    "D100",
    "D104",
    "D107",
    "D202",
    "D105",
    "D401",
    "FA100",
    "RET504",
    "RUF013",
    "TD002",
    "TD003",
    "FIX002",
    "UP007",
    "UP038"
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101","D100", "D103"]
[tool.ruff.lint.mccabe]
max-complexity = 10
[tool.ruff.lint.pylint]
max-args = 10
[tool.ruff.format]
docstring-code-format = true
[tool.ruff.lint.pydocstyle]
convention = "google"


# SYSTEMS

[tool.poetry-dynamic-versioning]
enable = true
pattern = "^v?(?P<base>\\d+\\.\\d+\\.\\d+)$"  # works with tags like X.Y.Z or vX.Y.Z

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
